My first real WorkbenchEditor for Tasks.

--- a/uftasks/uftasks-showcase/uftasks-webapp/src/main/java/org/uberfire/client/editors/TaskEditorView.html
+++ b/uftasks/uftasks-showcase/uftasks-webapp/src/main/java/org/uberfire/client/editors/TaskEditorView.html
@@ -17,13 +17,20 @@
 <div>
      <form data-field="task-editor-modal">
         <fieldset>
-            <legend>Task Editor</legend>
             <div class="form-group">
+                <b>Task Name: </b>
+				<br/>
+				<a data-field="task-name"></a>
+                <br/>
+                <a data-field="task-done"></a>
+               	<br/>
+                <b>Notes: </b>
+                <br/>
                 <a data-field="task-notes"></a>
                	<br/>
                	<b>Due Date:</b> <label data-field="task-due-date-label">Due Date</label> <a data-field="task-due-date"></a>
                 <br/>
-                <b>Priority:</b> <a data-field="task-priority"></a>
+                <b>Priority:</b>&nbsp;&nbsp;&nbsp;&nbsp;<a data-field="task-priority"></a>
             </div>
         </fieldset>
     </form>
